--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -20,5 +20,9 @@
 	},
 	"about": {
 		"detail": "查看受眾與數據"
+	},
+	"meta": {
+		"title": "SITCON 2026 贊助徵求書 - 支持開源，支持下一代的電資未來",
+		"description": "SITCON 是由學生組成、投身資訊教育與推廣開源精神的社群。也是一個由學生主辦的資訊研討會，給學生們一個發表交流技術的舞台。"
 	}
 }
